 - Kernel architecture is shown on Linux
 - FreeBSD soft-raid detection improved

v1.8 - 4/7/2011
 - DragonFly BSD support
 - Better Darwin (Mac) support
 - Reporting of Mac model
 - Ability to run certain commands as root (via nopasswd sudo)
 - Display CPU architecture on Windows
 - Better FreeBSD device detection
 - Bugfixes

v1.8.1 - 4/7/2011
 - Bugfix

v1.9 - 7/10/2013
 - Number of users logged in (with active shells)
 - Bugfixes
 - Default to UTC if timezone isn't set, instead of letting php5.3
   barf
 - HTML 5
 - More accurate memory usage since caches are omitted
 - JSON-P
 - Won't barf if ob_start or ob_gzhandler don't exist
 - Better OpenBSD support
 - Added Chinese/Finish/Italian translations
 - Date format customizable in config

v1.10 1/17/2014
 - Regex filtering for filesystem mountpoints
 - Fixed redhat icon
 - Multiple color scheme support

v1.11 5/2/2014
 - Intelligent output handling when running from cli
 - Adding some extentions to main git tree instead of packaging them separately
 - Better support for OS X Mavericks
 - Virtualization detection for Linux
 - CPU Usage reporting for Linux

v2.0 7/7/2014
 - Major refactor: no global vars; easier to use
   simply as a library by third party apps
 - Added unit tests via PHPUnit
 - added utorrent web ui parsing extension
 - proper fqdn resolution on linux using /etc/hosts
   if version reported by sysctl isn't fully qualified
 - all inline exit's converted to exceptions so this can be used as a library
   without fear of killing whichever app uses it
 - More detailed network detection type on Linux
 - CYGWIN support removed as it was pointless
 - Removed getAll() function from all info classes in favor of a unified 
   behavior in the Linfo->scan() method
 - Tweaks to common functions
 - Biting composer koolaid

 v2.0.1 7/7/2014
 - Bugfix: services not showing up on Linux

 v? ?/?/????
 - Some layout/css fixes
 - Converted layout/themes to use sass templating